[package]
name = "lc-interp"
version = "0.1.0"
authors = ["Jake Zimmerman <zimmerman.jake@gmail.com>"]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

[dependencies]
lalrpop-util = "0.17.1" # for lalrpop generated code
regex = "0.2.0"         # for lalrpop tokenizer
fnv = "1.0.3"           # faster hashmaps when keys are small strings (variables)

[build-dependencies]
lalrpop = "0.17.1"
